# clicker

./: CMakeLists.txt
assets/shaders/: scoretext.frag  scoretext.frag.spv  scoretext.vert  scoretext.vert.spv  star.frag  star.frag.spv  star.vert  star.vert.spv
include/: dynArray.h  game.h  garbage.h  mathext.h  util.h  vkFunctions.h
scripts/: generateVkFunctions.bat
src/: dynArray.c  game.c  garbage.c  mathext.c  pipeline.c  util.c  vkFunctions.c  vkInit.c
